# c-test-compile

./: .gitignore  CMakeLists.txt  conan.c  conanfile.txt
call_from_cpp/: CMakeLists.txt  call_from_cpp.cpp
